# paddle-lite-awcloud

./: .gitignore  build.sh  build_opt.sh  excute_opt.sh
cmake/backends/: intel_fpga.cmake
lite/api/: cxx_api.cc  paddle_use_passes.h
lite/backends/host/math/: norm.cc
lite/core/: CMakeLists.txt
lite/core/optimizer/: optimizer.cc
lite/core/optimizer/mir/: intel_fpga_insert_calib_pass.cc  intel_fpga_insert_calib_pass.h  intel_fpga_kernel_place_correct_pass.cc  intel_fpga_kernel_place_correct_pass.h  quantization_parameters_propagation_pass.cc  static_kernel_pick_pass.cc
lite/core/optimizer/mir/fusion/: quant_dequant_op_fuser.cc
lite/core/optimizer/mir/subgraph/: subgraph_pass.cc  subgraph_pass.h
lite/kernels/intel_fpga/: CMakeLists.txt  subgraph_compute.cc  subgraph_compute.h
lite/kernels/intel_fpga/bridges/: CMakeLists.txt  conv_op.cc  elementwise_op.cc  graph.cc  graph.h  paddle_use_bridges.h  pool_op.cc
lite/tools/: build.sh  build_linux.sh
